--- a/templates/home.html
+++ b/templates/home.html
@@ -56,10 +56,16 @@
   </head>
   <body>
     <h1>Next Word Prediction</h1>
+    
     <form action="{{ url_for('predict') }}" method="POST">
       <label for="text">Enter your text:</label>
       <input type="text" name="text" id="text" required>
       <button type="submit">Predict</button>
     </form>
+     <h1>Final Project</h1>
+     <h1>Sanket Patel</h1>
+     <h1>Fenil Patel</h1>
+     <h1>Navdeep Rawat</h1>
+     <h1>Krupa Shah</h1>
   </body>
 </html>
