--- a/templates/home.html
+++ b/templates/home.html
@@ -62,10 +62,9 @@
       <input type="text" name="text" id="text" required>
       <button type="submit">Predict</button>
     </form>
-     <h1>Final Project</h1>
+     <h1>Assignment-4</h1>
      <h1>Sanket Patel</h1>
      <h1>Fenil Patel</h1>
-     <h1>Navdeep Rawat</h1>
-     <h1>Krupa Shah</h1>
+    
   </body>
 </html>
